@@ -1,6 +1,11 @@
 Change Log
 ==========
 
+Next release
+------------
+
+- Close ImpLoader file handle to avoid resource warnings on Python 3.
+
 1.0a1 (2011-08-27)
 ------------------
 
